kubernetes/rook-ceph/storage/object/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: rook-ceph
  name: s3-fast
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: https
  hostnames:
    - "s3-fast.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: rook-ceph-rgw-fast
          port: 8080
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: rook-ceph
  name: s3-fast
spec:
  parentRefs:
    - namespace: kube-system
      name: cilium-default
      sectionName: http
  hostnames:
    - "s3-fast.timtor.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
